# terraform

./: .gitignore  README.md
.github/workflows/: build-lambda.yml
backend_state_init/: backend.tf.sample
docs/: README.md  index.html  topology.md
docs/cicd/: README.md  deploying_with_circleci.md  deploying_with_github_actions.md
docs/modules/: api_gateway.md  connectivity_check.md  datadog_aws_integration.md  datadog_aws_integration_v2.md  guardduty.md  identity_token_rotation.md  kms_secrets.md  s3_access_logging.md  s3_bucket.md  security_hub.md  wafv2.md
gh_actions/attach_plan_to_pr/: README.md  action.yml
modules/api_gateway/: README.md  main.tf  output.tf  variables.tf  versions.tf
modules/apigateway-v1/: main.tf  outputs.tf  variables.tf
modules/connectivity_check/: README.md  main.tf  monitoring.tf  outputs.tf  variables.tf
modules/datadog_aws_integration/: conf.tf  main.tf  output.tf  variables.tf
modules/datadog_aws_integration_v2/: main.tf  variables.tf
modules/guardduty/: main.tf  outputs.tf  variables.tf
modules/identity-token-rotation-lambda/: main.tf  requirements.txt  variable.tf  (+1 more)
modules/lambda-layer-deps/examples/basic-python-poetry/: main.tf  pyproject.toml
modules/lambda-layer-deps/examples/basic-python-poetry/src/: index.py
modules/lambda-layer-deps/examples/python-poetry-with-shared-package/services/my_service/: main.tf  pyproject.toml
modules/lambda-layer-deps/examples/python-poetry-with-shared-package/shared/: pyproject.toml
modules/lambda-layer-deps/examples/python-poetry-with-shared-package/shared/shared/: myip.py
(+52 files in other folders)
