[tool.poetry]
name = "basic"
version = "0.1.0"
description = ""
authors = ["Adam Tistler <atistler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
names = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
