[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["Adam Tistler <atistler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
